--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: rgb(0, 0, 0);
+    position: relative;
 }
 
 #letsEnd{
@@ -14,4 +15,36 @@ li{
 input{
     outline: none;
     border: none;
+}
+.positoning{
+    position: absolute;
+    top : 150px;
+    left: 50%;
+    transform: translate(-50%, 0px);
+    display: none;
+    opacity: 0.9;
+}
+.card{
+    background-color: #ffffff;
+    color: rgb(0, 0, 0);
+    box-shadow: 2px 2px 10px black;
+}
+.secound-alert{
+    display: flex;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgba(255, 255, 255, 0.3);
+    border: 1px solid rgba(255, 255, 255, 0.5);
+    box-shadow: 1px 1px 1px 1px black;
+    display: none;
+}
+.secound-alert p {
+    padding: 0 10px;
+    margin: 0%;
+    text-align: start;
+    flex-grow: 5;
+}
+.point{
+    cursor: pointer;
 }
