--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,9 @@
 body{
     background-color: rgb(0, 0, 0);
+    height: 150vh;
+}
+#letsEnd{
+    display: none;
 }
 ul{
     padding-left: 0rem;
@@ -11,8 +15,21 @@ input{
     outline: none;
     border: none;
 }
+.positoning{
+    position: fixed;
+    top : 150px;
+    left: 50%;
+    transform: translate(-50%, 0px);
+    display: none;
+}
+.card{
+    /* background-color: #ffffff; */
+    color: rgb(0, 0, 0);
+    box-shadow: 2px 2px 10px black;
+}
 #inputUlP {
     background-color: rgb(45, 45, 45);
+    color: #ffffff;
     padding: 10px 0px;
 }
 .secound-alert{
@@ -22,7 +39,7 @@ input{
     justify-content: space-between;
     background-color: rgba(255, 255, 255, 0.3);
     border: 1px solid rgba(255, 255, 255, 0.5);
-    box-shadow: 1px 1px 1px 1px black;
+    box-shadow: 1px 1px 1px 1px #19191980;
     display: none;
 }
 .secound-alert p {
@@ -34,6 +51,14 @@ input{
 .point{
     cursor: pointer;
 }
-.customli{
-    background-color: rgb(18, 18, 18);
+.fa-circle-check{
+    display: block;
+    margin: 10px 0px 30px;
+    font-size: 4.5rem;
+    color: rgb(0, 112, 0);
+}
+.fa-square-xmark{
+    font-size: 3rem;
+    margin: 10px;
+    color: rgba(0, 0, 0, 0.8);
 }
