--- a/style/style.css
+++ b/style/style.css
@@ -16,7 +16,7 @@ input{
     border: none;
 }
 .positoning{
-    position: fixed;
+    position: absolute;
     top : 150px;
     left: 50%;
     transform: translate(-50%, 0px);
